k8s/media-services/homepage/service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: homepage
  namespace: media-services
  labels:
    app: homepage
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 3000
    targetPort: http
    protocol: TCP
  selector:
    app: homepage
